--- a/skipped.ipynb
+++ b/skipped.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,18 @@
     "from collections import Counter\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(\"fake_data.csv\", encoding_errors=\"ignore\", on_bad_lines='skip', sep=\",\",)"
+    "# df = pd.read_csv(\"fake_data.csv\", encoding_errors=\"ignore\", on_bad_lines='skip', sep=\",\",)\n",
+    "df = pd.read_csv(\"BPI2016_Clicks_Logged_In.csv\", encoding_errors=\"ignore\", on_bad_lines='skip', sep=\";\",\n",
+    "                usecols=['CustomerID', 'AgeCategory', 'Gender', 'Office_U', 'Office_W',\n",
+    "       'SessionID', 'IPID', 'TIMESTAMP', 'VHOST', 'URL_FILE', 'PAGE_NAME',\n",
+    "       'REF_URL_category', 'page_load_error', 'page_action_detail', 'tip',\n",
+    "       'service_detail', 'xps_info'])\n",
+    "df.rename(columns={'URL_FILE':'Activity'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,84 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>level_0</th>\n",
-       "      <th>level_1</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Start_application</td>\n",
-       "      <td>Input_info</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Input_info</td>\n",
-       "      <td>Send_application</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Send_application</td>\n",
-       "      <td>Accept_offer</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Accept_offer</td>\n",
-       "      <td>end_session</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Input_info</td>\n",
-       "      <td>end_session</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             level_0           level_1  value\n",
-       "0  Start_application        Input_info      2\n",
-       "1         Input_info  Send_application      2\n",
-       "2   Send_application      Accept_offer      3\n",
-       "3       Accept_offer       end_session      4\n",
-       "4         Input_info       end_session      1"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create consecutive column with the consecutive activity and count how many time each pair occurs\n",
     "df[\"Consecutive_1\"] = df.groupby(\"SessionID\")[\"Activity\"].shift(periods=-1)\n",
@@ -116,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +103,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_chances_total"
+    "df_chances_rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try to find paths of length 3.\n",
+    "A - B - C\n",
+    "Sort on chance. \n",
+    "So chance a to b * b to c "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_paths(_df:pd.DataFrame,len:int = 3):\n",
+    "  df = _df.copy()\n",
+    "  col = df.columns.values\n",
+    "  row  = df.index.values\n",
+    "  s  = row.size\n",
+    "  res = []\n",
+    "  while s > 0:\n",
+    "    current_row = df.iloc[row.size - s]\n",
+    "    i = 0\n",
+    "    while i < current_row.size:\n",
+    "      current_col = df.columns[i]\n",
+    "      chance = current_row.iloc[i]\n",
+    "      if chance > 0:\n",
+    "        a = current_row.name\n",
+    "        b = current_col\n",
+    "        c = []\n",
+    "        if (df.index == b).any() :\n",
+    "          _r = df.loc[b]\n",
+    "          index = 0\n",
+    "          for r in _r:\n",
+    "            if r > 0:\n",
+    "              res.append([a,b,col.item(index),r*chance])  \n",
+    "            index += 1        \n",
+    "            \n",
+    "      i += 1\n",
+    "    s -= 1\n",
+    "\n",
+    "  return res\n",
+    "\n",
+    "\n",
+    "paths = find_paths(df_chances_rest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(paths)"
    ]
   }
  ],
