--- a/skipped.ipynb
+++ b/skipped.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4         Input_info       end_session      1"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "Start_application           0.0         1.0          0.000000     0.000000"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "3  0.333333  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,58 +421,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>level_1</th>\n",
+       "      <th>Accept_offer</th>\n",
+       "      <th>Input_info</th>\n",
+       "      <th>Send_application</th>\n",
+       "      <th>end_session</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>level_0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Accept_offer</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Input_info</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Send_application</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Start_application</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "level_1            Accept_offer  Input_info  Send_application  end_session\n",
+       "level_0                                                                   \n",
+       "Accept_offer                0.0         0.0          0.000000     1.000000\n",
+       "Input_info                  0.0         0.0          0.666667     0.333333\n",
+       "Send_application            1.0         0.0          0.000000     0.000000\n",
+       "Start_application           0.0         1.0          0.000000     0.000000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_test = df_paths.copy()\n",
-    "# df_test.head(100)"
+    "df_chances_rest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decrease the probability to reach event: Send_application with deviation rate: 10\n",
+      "from event: Input_info to: Send_application\n",
+      "old value: 0.6666666666666666\n",
+      "decrease: 0.06666666666666665\n",
+      "new value: 0.6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>level_1</th>\n",
+       "      <th>Accept_offer</th>\n",
+       "      <th>Input_info</th>\n",
+       "      <th>Send_application</th>\n",
+       "      <th>end_session</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>level_0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Accept_offer</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Input_info</th>\n",
+       "      <td>0.066667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Send_application</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Start_application</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "level_1            Accept_offer  Input_info  Send_application  end_session\n",
+       "level_0                                                                   \n",
+       "Accept_offer           0.000000         0.0               0.0     1.000000\n",
+       "Input_info             0.066667         0.0               0.6     0.333333\n",
+       "Send_application       1.000000         0.0               0.0     0.000000\n",
+       "Start_application      0.000000         1.0               0.0     0.000000"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import math\n",
+    "def skip_event_all_possibilities(_df:pd.DataFrame,event:str,deviation_rate):\n",
+    "  df = _df.copy()\n",
+    "  print(f\"Decrease the probability to reach event: {event} with deviation rate: {deviation_rate}\")\n",
+    "  old_probability = df.loc[:,event]\n",
+    "  deviation_rate = deviation_rate / 100\n",
+    "  \n",
+    "  # decrease the probability\n",
+    "  for i,prob in old_probability.items():\n",
+    "    if prob > 0 and prob - deviation_rate > 0:\n",
+    "      print(f\"from event: {i} to: {event}\")\n",
+    "      decrease = prob * (1-deviation_rate)\n",
+    "      \n",
+    "      print(f\"old value: {prob}\")\n",
+    "      print(f\"decrease: {prob - decrease}\")\n",
+    "      print(f\"new value: {decrease}\")\n",
+    "      \n",
+    "      df.loc[i,event] -= prob - decrease\n",
+    "      \n",
+    "      for _i,_prob in df.loc[i,:].items():\n",
+    "        df.loc[i,_i] += (prob - decrease) * df.loc[event,_i]\n",
+    "      \n",
+    "      \n",
+    "    elif prob > 0 and prob - deviation_rate < 0:\n",
+    "      prob = 0\n",
+    "  \n",
+    "  return df\n",
+    "       \n",
+    "\n",
+    "skip_event_all_possibilities(df_chances_rest,\"Send_application\",10)\n",
     "\n",
     "\n",
-    "def round_decimals_down(number:float, decimals:int=1):\n",
-    "    \"\"\"\n",
-    "    Returns a value rounded down to a specific number of decimal places.\n",
-    "    \"\"\"\n",
-    "    if not isinstance(decimals, int):\n",
-    "        raise TypeError(\"decimal places must be an integer\")\n",
-    "    elif decimals < 0:\n",
-    "        raise ValueError(\"decimal places has to be 0 or more\")\n",
-    "    elif decimals == 0:\n",
-    "        return math.floor(number)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [12], line 26\u001b[0m\n\u001b[0;32m     22\u001b[0m             lijst_aantal_gegenereerde\u001b[39m.\u001b[39mappend(\u001b[39mlen\u001b[39m(aanvragen_ww_list))\n\u001b[0;32m     24\u001b[0m     \u001b[39mreturn\u001b[39;00m aanvragen_ww_list\n\u001b[1;32m---> 26\u001b[0m markov_result \u001b[39m=\u001b[39m markov_chain(\u001b[39m2000\u001b[39m, start_chances, df_dict)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_dict' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def markov_chain(amount, start_chances, df_dict):\n",
+    "    lijst_aantal_gegenereerde = []\n",
     "\n",
-    "    factor = 10 ** decimals\n",
-    "    return math.floor(number * factor) / factor\n",
+    "    #Loop through the df with all the chances and based on this a new session is generated\n",
+    "    aanvragen_ww_list = []\n",
+    "    while len(aanvragen_ww_list) <= amount:\n",
+    "        activity_list = []\n",
+    "        activity = np.random.choice(a = np.array(start_chances.index), size = 1, p = np.array(start_chances.values))\n",
+    "        activity_list.append(activity[0])\n",
     "\n",
+    "        while activity != \"end_session\":\n",
+    "            row_activity = df_dict[activity[0]]\n",
+    "            activity = np.random.choice(a = list(row_activity.keys()), size = 1, p = list(row_activity.values()))\n",
+    "            activity_list.append(activity[0])\n",
     "\n",
-    "data = df_test.head(101)[\"a->c\"]\n",
-    "ranges = [1,0.9,0.8,0.7,0.6,0.5,0.4,0.3,0.1,0.0]\n",
-    "# count = [0,0,0,0,0,0,0,0,0,0]\n",
+    "        if \"/portal/page/portal/home/diensten/aanvragen-ww\" in activity_list:\n",
+    "            aanvragen_ww_list.append(activity_list)\n",
     "\n",
-    "new_df = pd.DataFrame(columns=ranges,index=[\"a->c\"])\n",
-    "new_df.loc['a->c'] = pd.Series({1:0,0.9:0,0.8:0,0.7:0,0.6:0,0.5:0,0.4:0,0.3:0,0.1:0,0.0:0})\n",
-    "\n",
-    "for d in data:\n",
-    "  if not new_df[round_decimals_down(d)][0] :\n",
-    "    new_df[round_decimals_down(d)][0] = 1\n",
-    "  else:\n",
-    "    new_df[round_decimals_down(d)][0] += 1\n",
+    "        #print how many sessions are already generated by the Markov chain. Only print every 250 generated sessions\n",
+    "        if len(aanvragen_ww_list) % 250 == 0 and len(aanvragen_ww_list) not in lijst_aantal_gegenereerde:\n",
+    "            print(len(aanvragen_ww_list))\n",
+    "            lijst_aantal_gegenereerde.append(len(aanvragen_ww_list))\n",
     "    \n",
-    "# new_df.plot.barh()\n"
+    "    return aanvragen_ww_list\n",
+    "\n",
+    "markov_result = markov_chain(2000, start_chances, df_dict)\n",
+    "# markov_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import matplotlib.pyplot as plt\n",
+    "# import math\n",
+    "\n",
+    "\n",
+    "# def round_decimals_down(number:float, decimals:int=1):\n",
+    "#     \"\"\"\n",
+    "#     Returns a value rounded down to a specific number of decimal places.\n",
+    "#     \"\"\"\n",
+    "#     if not isinstance(decimals, int):\n",
+    "#         raise TypeError(\"decimal places must be an integer\")\n",
+    "#     elif decimals < 0:\n",
+    "#         raise ValueError(\"decimal places has to be 0 or more\")\n",
+    "#     elif decimals == 0:\n",
+    "#         return math.floor(number)\n",
+    "\n",
+    "#     factor = 10 ** decimals\n",
+    "#     return math.floor(number * factor) / factor\n",
+    "\n",
+    "\n",
+    "# data = df_test.head(101)[\"a->c\"]\n",
+    "# ranges = [1,0.9,0.8,0.7,0.6,0.5,0.4,0.3,0.1,0.0]\n",
+    "# # count = [0,0,0,0,0,0,0,0,0,0]\n",
+    "\n",
+    "# new_df = pd.DataFrame(columns=ranges,index=[\"a->c\"])\n",
+    "# new_df.loc['a->c'] = pd.Series({1:0,0.9:0,0.8:0,0.7:0,0.6:0,0.5:0,0.4:0,0.3:0,0.1:0,0.0:0})\n",
+    "\n",
+    "# for d in data:\n",
+    "#   if not new_df[round_decimals_down(d)][0] :\n",
+    "#     new_df[round_decimals_down(d)][0] = 1\n",
+    "#   else:\n",
+    "#     new_df[round_decimals_down(d)][0] += 1\n",
+    "    \n",
+    "# # new_df.plot.barh()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -543,19 +802,19 @@
        "D  0.0  0.2  0.0  0.8"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def create_test_df():\n",
-    "  d = {'B': [1,0, 0.5,0], 'C': [0,0.5,0,0.2],'D':[0,0.5,0.5,0],'E':[0,0,0,0.8]}\n",
-    "  df = pd.DataFrame(data=d)\n",
-    "  df.index = ['A','B','C','D']\n",
-    "  return df\n",
+    "# def create_test_df():\n",
+    "#   d = {'B': [1,0, 0.5,0], 'C': [0,0.5,0,0.2],'D':[0,0.5,0.5,0],'E':[0,0,0,0.8]}\n",
+    "#   df = pd.DataFrame(data=d)\n",
+    "#   df.index = ['A','B','C','D']\n",
+    "#   return df\n",
     "\n",
-    "create_test_df()  "
+    "# create_test_df()  "
    ]
   },
   {
@@ -563,12 +822,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def skip_event(_df:pd.DataFrame,event:str):\n",
-    "  df = _df.copy()\n",
-    "  \n",
-    "  "
-   ]
+   "source": []
   }
  ],
  "metadata": {
