--- a/Swapping.ipynb
+++ b/Swapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,12 @@
     "#        'SessionID', 'IPID', 'TIMESTAMP', 'VHOST', 'URL_FILE', 'PAGE_NAME',\n",
     "#        'REF_URL_category', 'page_load_error', 'page_action_detail', 'tip',\n",
     "#        'service_detail', 'xps_info'])\n",
-    "df.rename(columns={'URL_FILE':'Activity'}, inplace=True)"
+    "# df.rename(columns={'URL_FILE':'Activity'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4         Input_info       end_session      1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "Start_application           0.0         1.0          0.000000     0.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_paths(_df:pd.DataFrame,len:int = 3):\n",
+    "  df = _df.copy()\n",
+    "  col = df.columns.values\n",
+    "  row  = df.index.values\n",
+    "  s  = row.size\n",
+    "  res = []\n",
+    "  while s > 0:\n",
+    "    current_row = df.iloc[row.size - s]\n",
+    "    i = 0\n",
+    "    while i < current_row.size:\n",
+    "      current_col = df.columns[i]\n",
+    "      chance = current_row.iloc[i]\n",
+    "      if chance > 0:\n",
+    "        a = current_row.name\n",
+    "        b = current_col\n",
+    "        \n",
+    "        if (df.index == b).any() :\n",
+    "          _r = df.loc[b]\n",
+    "          index = 0\n",
+    "          for r in _r:\n",
+    "            if r > 0:\n",
+    "              res.append([a,b,col.item(index),r*chance,chance,r])  \n",
+    "            index += 1        \n",
+    "            \n",
+    "      i += 1\n",
+    "    s -= 1\n",
+    "\n",
+    "  return res\n",
+    "\n",
+    "\n",
+    "paths = find_paths(df_chances_rest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_paths = pd.DataFrame(paths,columns=['a','b','c','a->c','a->b', 'b->c'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +346,156 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>A</th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "      <th>a-&gt;c</th>\n",
+       "      <th>a-&gt;b</th>\n",
+       "      <th>b-&gt;c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Send_application</td>\n",
+       "      <td>Accept_offer</td>\n",
+       "      <td>end_session</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Input_info</td>\n",
+       "      <td>Send_application</td>\n",
+       "      <td>Accept_offer</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Start_application</td>\n",
+       "      <td>Input_info</td>\n",
+       "      <td>Send_application</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Start_application</td>\n",
+       "      <td>Input_info</td>\n",
+       "      <td>end_session</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   a                 b                 c      a->c      a->b  \\\n",
+       "0   Send_application      Accept_offer       end_session  1.000000  1.000000   \n",
+       "1         Input_info  Send_application      Accept_offer  0.666667  0.666667   \n",
+       "2  Start_application        Input_info  Send_application  0.666667  1.000000   \n",
+       "3  Start_application        Input_info       end_session  0.333333  1.000000   \n",
+       "\n",
+       "       b->c  \n",
+       "0  1.000000  \n",
+       "1  1.000000  \n",
+       "2  0.666667  \n",
+       "3  0.333333  "
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_paths.sort_values(by= [\"a->c\"],ascending=False,inplace=True,ignore_index=True)\n",
+    "df_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = df_paths.copy()\n",
+    "# df_test.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "def round_decimals_down(number:float, decimals:int=1):\n",
+    "    \"\"\"\n",
+    "    Returns a value rounded down to a specific number of decimal places.\n",
+    "    \"\"\"\n",
+    "    if not isinstance(decimals, int):\n",
+    "        raise TypeError(\"decimal places must be an integer\")\n",
+    "    elif decimals < 0:\n",
+    "        raise ValueError(\"decimal places has to be 0 or more\")\n",
+    "    elif decimals == 0:\n",
+    "        return math.floor(number)\n",
+    "\n",
+    "    factor = 10 ** decimals\n",
+    "    return math.floor(number * factor) / factor\n",
+    "\n",
+    "\n",
+    "data = df_test.head(101)[\"a->c\"]\n",
+    "ranges = [1,0.9,0.8,0.7,0.6,0.5,0.4,0.3,0.1,0.0]\n",
+    "# count = [0,0,0,0,0,0,0,0,0,0]\n",
+    "\n",
+    "new_df = pd.DataFrame(columns=ranges,index=[\"a->c\"])\n",
+    "new_df.loc['a->c'] = pd.Series({1:0,0.9:0,0.8:0,0.7:0,0.6:0,0.5:0,0.4:0,0.3:0,0.1:0,0.0:0})\n",
+    "\n",
+    "for d in data:\n",
+    "  if not new_df[round_decimals_down(d)][0] :\n",
+    "    new_df[round_decimals_down(d)][0] = 1\n",
+    "  else:\n",
+    "    new_df[round_decimals_down(d)][0] += 1\n",
+    "    \n",
+    "# new_df.plot.barh()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
        "      <th>B</th>\n",
        "      <th>C</th>\n",
        "      <th>D</th>\n",
@@ -308,7 +505,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -316,25 +512,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.8</td>\n",
        "    </tr>\n",
@@ -343,208 +536,38 @@
        "</div>"
       ],
       "text/plain": [
-       "   A    B    C    D    E\n",
-       "A  0  1.0  0.0  0.0  0.0\n",
-       "B  0  0.0  0.6  0.4  0.0\n",
-       "C  0  0.0  0.0  1.0  0.0\n",
-       "D  0  0.2  0.0  0.0  0.8"
+       "     B    C    D    E\n",
+       "A  1.0  0.0  0.0  0.0\n",
+       "B  0.0  0.5  0.5  0.0\n",
+       "C  0.5  0.0  0.5  0.0\n",
+       "D  0.0  0.2  0.0  0.8"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def create_test_df_circle():\n",
-    "  d = {'A': [0,0,0,0],'B': [1,0.2,0,0.2], 'C': [0,0.4,0,0],'D':[0,0.4,1,0],'E':[0,0,0,0.8]}\n",
-    "  df = pd.DataFrame(data=d)\n",
-    "  df.index = ['A','B','C','D']\n",
-    "  return df\n",
-    "\n",
     "def create_test_df():\n",
-    "  d = {'A': [0,0,0,0],'B': [1,0,0,0.2], 'C': [0,0.6,0,0],'D':[0,0.4,1,0],'E':[0,0,0,0.8]}\n",
+    "  d = {'B': [1,0, 0.5,0], 'C': [0,0.5,0,0.2],'D':[0,0.5,0.5,0],'E':[0,0,0,0.8]}\n",
     "  df = pd.DataFrame(data=d)\n",
     "  df.index = ['A','B','C','D']\n",
     "  return df\n",
     "\n",
-    "def create_test_df_simple():\n",
-    "  d = {'A': [0,0,0,0],'B': [1,0,0,0], 'C': [0,1,0,0],'D':[0,0,1,0],'E':[0,0,0,1]}\n",
-    "  df = pd.DataFrame(data=d)\n",
-    "  df.index = ['A','B','C','D']\n",
-    "  return df\n",
-    "\n",
-    "# test_df = create_test_df_simple() \n",
-    "test_df = create_test_df() \n",
-    "test_df "
+    "create_test_df()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "swapping event C with D with deviation rate: 0.5\n",
-      "A    0.0\n",
-      "B    0.6\n",
-      "C    0.0\n",
-      "D    0.0\n",
-      "Name: C, dtype: float64\n",
-      "   A    B    C    D    E  Sum\n",
-      "A  0  1.0  0.0  0.0  0.0  1.0\n",
-      "B  0  0.0  0.3  0.7  0.0  1.0\n",
-      "C  0  0.0  0.0  1.0  0.0  1.0\n",
-      "D  0  0.2  0.0  0.0  0.8  1.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>from</th>\n",
-       "      <th>to</th>\n",
-       "      <th>inject</th>\n",
-       "      <th>%</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>B</td>\n",
-       "      <td>D</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.428571</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  from to inject         %\n",
-       "0    B  D      C  0.428571"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def swapping(_df:pd.DataFrame,event_1:str,event_2:str,deviation_rate):\n",
+    "def swapping(_df:pd.DataFrame,event:str):\n",
     "  df = _df.copy()\n",
-    "  swapped = []\n",
-    "  deviation_rate = deviation_rate / 100\n",
-    "  print(f\"swapping event {event_1} with {event_2} with deviation rate: {deviation_rate}\")\n",
-    "  print(df.loc[:,event_1])\n",
-    "  for i,val in df.loc[:,event_1].items():\n",
-    "    if val > 0:\n",
-    "      old_val = df.loc[i,event_1]\n",
-    "      df.loc[i,event_1] *= 1 - deviation_rate\n",
-    "\n",
-    "      df.loc[i,event_2] += old_val - df.loc[i,event_1]\n",
-    "      row = {'from':i,'to':event_2,'inject':event_1,'%': (old_val - df.loc[i,event_1]) / df.loc[i,event_2]}\n",
-    "      swapped.append(row)\n",
-    "        \n",
-    "    \n",
-    "  swapped_df = pd.DataFrame(swapped)\n",
-    "  return (df,swapped_df)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# swap_df,ch = swapping(test_df,'B','C',10)\n",
-    "swap_df,inject_df = swapping(test_df,'C','D',50)\n",
-    "sum_check = swap_df.copy()\n",
-    "if not \"Sum\" in sum_check: sum_check['Sum'] = sum_check.sum(axis=1)\n",
-    "print(sum_check)\n",
-    "\n",
-    "# print(swap_df)\n",
-    "inject_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['B', 'D', 'C', 'E'],\n",
-       " ['B', 'C', 'D', 'E'],\n",
-       " ['B', 'C', 'D', 'E'],\n",
-       " ['B', 'D', 'C', 'E'],\n",
-       " ['B', 'D', 'C', 'E'],\n",
-       " ['B', 'D', 'C', 'B', 'D', 'C', 'B', 'D', 'C', 'E'],\n",
-       " ['B', 'D', 'C', 'E'],\n",
-       " ['B', 'D', 'C', 'B', 'D', 'C', 'B', 'D', 'C', 'E'],\n",
-       " ['B', 'D', 'C', 'E'],\n",
-       " ['B', 'D', 'C', 'B', 'C', 'D', 'E']]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def generate_markov_chain(amount:int,start_chances,df_dict:pd.DataFrame,bookkeeping:pd.DataFrame) -> list:\n",
-    "  generated_sessions = []\n",
-    "  while len(generated_sessions) < amount:\n",
-    "    new_session = []\n",
-    "    # choose start activity\n",
-    "    # start_activity = np.random.choice(a = np.array(start_chances.index), size = 1, p = np.array(start_chances.values))\n",
-    "    start_activity = np.random.choice(a = np.array(df_dict.iloc[0,:].index), size = 1, p = np.array(df_dict.iloc[0,:].values))\n",
-    "    new_session.append(start_activity[0])\n",
-    "\n",
-    "    \n",
-    "    # while new_session[-1] != 'end_session':\n",
-    "    while new_session[-1] != 'E':\n",
-    "      curr_activity = new_session[-1]\n",
-    "      row_activity = df_dict.loc[curr_activity,:]\n",
-    "      activity = np.random.choice(a = list(row_activity.keys()), size = 1, p = list(row_activity.values))\n",
-    "      new_session.append(activity[0])\n",
-    "      \n",
-    "      # check if last 2 activities are found in the bookkeeping\n",
-    "      index = bookkeeping[((bookkeeping['from'] == curr_activity) & (bookkeeping['to'] == activity[0]))].index.tolist()\n",
-    "      if index:\n",
-    "        # pattern has been reached\n",
-    "        # next activity should be injected from bookkeeping\n",
-    "        injected_activity = bookkeeping.iloc[index]['inject'].values[0]\n",
-    "        curr_activity = new_session[-1]\n",
-    "        row_activity = df_dict.loc[curr_activity,:]\n",
-    "        activity = np.random.choice(a = list(row_activity.keys()), size = 1, p = list(row_activity.values))\n",
-    "        new_session.append(injected_activity)\n",
-    "        new_session.append(activity[0])\n",
-    "\n",
-    "    generated_sessions.append(new_session)        \n",
-    "    \n",
-    "    if len(generated_sessions) % 250 == 0: print(len(generated_sessions))\n",
     "  \n",
-    "  return generated_sessions\n",
-    "\n",
-    "test = generate_markov_chain(10,start_chances,swap_df,inject_df)\n",
-    "test\n"
+    "  "
    ]
   }
  ],
