--- a/LabellingReplacingPattern.ipynb
+++ b/LabellingReplacingPattern.ipynb
@@ -387,208 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>a</th>\n",
-       "      <th>b</th>\n",
-       "      <th>c</th>\n",
-       "      <th>a-b-c</th>\n",
-       "      <th>a-b</th>\n",
-       "      <th>b-c</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>741365</th>\n",
-       "      <td>/zoeken_portlet/ajax/zoekBeroep</td>\n",
-       "      <td>/werk_nl/werkgever/cvs_zoeken</td>\n",
-       "      <td>/zoeken_portlet_wg/ajax/selectVacature</td>\n",
-       "      <td>7.070286e-07</td>\n",
-       "      <td>0.000284</td>\n",
-       "      <td>0.002488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>601066</th>\n",
-       "      <td>/zoeken_portlet/ajax/zoekBeroep</td>\n",
-       "      <td>/werk_nl/werkgever/cvs_zoeken</td>\n",
-       "      <td>/zoeken_portlet_wg/ajax/selectContactpersoon</td>\n",
-       "      <td>1.767571e-06</td>\n",
-       "      <td>0.000284</td>\n",
-       "      <td>0.006219</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27695</th>\n",
-       "      <td>/zoeken_portlet/ajax/zoekBeroep</td>\n",
-       "      <td>/werk_nl/werknemer/vacatures</td>\n",
-       "      <td>/zoeken_portlet/ajax/zoekAantalIndicatief</td>\n",
-       "      <td>3.049503e-03</td>\n",
-       "      <td>0.039839</td>\n",
-       "      <td>0.076546</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>272496</th>\n",
-       "      <td>/zoeken_portlet/ajax/zoekBeroep</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/werk-zoeken/va...</td>\n",
-       "      <td>/zoeken_portlet/ajax/zoekAantalIndicatief</td>\n",
-       "      <td>3.176599e-05</td>\n",
-       "      <td>0.010374</td>\n",
-       "      <td>0.003062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>344404</th>\n",
-       "      <td>/zoeken_portlet/ajax/zoekBeroep</td>\n",
-       "      <td>/werk_nl/werkgever/cvs_zoeken</td>\n",
-       "      <td>/zoeken_portlet/ajax/zoekAantalIndicatief</td>\n",
-       "      <td>1.484760e-05</td>\n",
-       "      <td>0.000284</td>\n",
-       "      <td>0.052239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1061762</th>\n",
-       "      <td>/</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...</td>\n",
-       "      <td>//portal/page/portal/werk_nl/werknemer/sollici...</td>\n",
-       "      <td>1.178980e-07</td>\n",
-       "      <td>0.016839</td>\n",
-       "      <td>0.000007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1182578</th>\n",
-       "      <td>/</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/werk-zoeken/va...</td>\n",
-       "      <td>//portal/page/portal/werk_nl/werknemer/sollici...</td>\n",
-       "      <td>5.024011e-08</td>\n",
-       "      <td>0.047927</td>\n",
-       "      <td>0.000001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>714819</th>\n",
-       "      <td>/</td>\n",
-       "      <td>/werk_nl/werknemer/home</td>\n",
-       "      <td>//</td>\n",
-       "      <td>8.335844e-07</td>\n",
-       "      <td>0.161917</td>\n",
-       "      <td>0.000005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1080732</th>\n",
-       "      <td>/</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/wijz...</td>\n",
-       "      <td>//</td>\n",
-       "      <td>1.046991e-07</td>\n",
-       "      <td>0.006477</td>\n",
-       "      <td>0.000016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1182577</th>\n",
-       "      <td>/</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/werk-zoeken/va...</td>\n",
-       "      <td>//</td>\n",
-       "      <td>5.024011e-08</td>\n",
-       "      <td>0.047927</td>\n",
-       "      <td>0.000001</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1288298 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                       a  \\\n",
-       "741365   /zoeken_portlet/ajax/zoekBeroep   \n",
-       "601066   /zoeken_portlet/ajax/zoekBeroep   \n",
-       "27695    /zoeken_portlet/ajax/zoekBeroep   \n",
-       "272496   /zoeken_portlet/ajax/zoekBeroep   \n",
-       "344404   /zoeken_portlet/ajax/zoekBeroep   \n",
-       "...                                  ...   \n",
-       "1061762                                /   \n",
-       "1182578                                /   \n",
-       "714819                                 /   \n",
-       "1080732                                /   \n",
-       "1182577                                /   \n",
-       "\n",
-       "                                                         b  \\\n",
-       "741365                       /werk_nl/werkgever/cvs_zoeken   \n",
-       "601066                       /werk_nl/werkgever/cvs_zoeken   \n",
-       "27695                         /werk_nl/werknemer/vacatures   \n",
-       "272496   /werk_nl/werknemer/mijn_werkmap/werk-zoeken/va...   \n",
-       "344404                       /werk_nl/werkgever/cvs_zoeken   \n",
-       "...                                                    ...   \n",
-       "1061762  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...   \n",
-       "1182578  /werk_nl/werknemer/mijn_werkmap/werk-zoeken/va...   \n",
-       "714819                             /werk_nl/werknemer/home   \n",
-       "1080732  /werk_nl/werknemer/mijn_werkmap/doorgeven/wijz...   \n",
-       "1182577  /werk_nl/werknemer/mijn_werkmap/werk-zoeken/va...   \n",
-       "\n",
-       "                                                         c         a-b-c  \\\n",
-       "741365              /zoeken_portlet_wg/ajax/selectVacature  7.070286e-07   \n",
-       "601066        /zoeken_portlet_wg/ajax/selectContactpersoon  1.767571e-06   \n",
-       "27695            /zoeken_portlet/ajax/zoekAantalIndicatief  3.049503e-03   \n",
-       "272496           /zoeken_portlet/ajax/zoekAantalIndicatief  3.176599e-05   \n",
-       "344404           /zoeken_portlet/ajax/zoekAantalIndicatief  1.484760e-05   \n",
-       "...                                                    ...           ...   \n",
-       "1061762  //portal/page/portal/werk_nl/werknemer/sollici...  1.178980e-07   \n",
-       "1182578  //portal/page/portal/werk_nl/werknemer/sollici...  5.024011e-08   \n",
-       "714819                                                  //  8.335844e-07   \n",
-       "1080732                                                 //  1.046991e-07   \n",
-       "1182577                                                 //  5.024011e-08   \n",
-       "\n",
-       "              a-b       b-c  \n",
-       "741365   0.000284  0.002488  \n",
-       "601066   0.000284  0.006219  \n",
-       "27695    0.039839  0.076546  \n",
-       "272496   0.010374  0.003062  \n",
-       "344404   0.000284  0.052239  \n",
-       "...           ...       ...  \n",
-       "1061762  0.016839  0.000007  \n",
-       "1182578  0.047927  0.000001  \n",
-       "714819   0.161917  0.000005  \n",
-       "1080732  0.006477  0.000016  \n",
-       "1182577  0.047927  0.000001  \n",
-       "\n",
-       "[1288298 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create column that counts how many times the combination of the values in columns a and c occurs\n",
-    "tester = tester.sort_values(by=['a','c'], ascending=False)\n",
-    "tester\n"
+    "tester['a-c'] = tester['a'] +'---' + tester['c']\n",
+    "# create column that counts how many times the value in column a-c occurs\n",
+    "tester['count'] = tester.groupby('a-c')['a-c'].transform('count')\n",
+    "# filter on count == 2\n",
+    "tester = tester[tester['count'] == 2]\n",
+    "test2= tester.copy()\n"
    ]
   },
   {
