--- a/LabellingSkippingPattern.ipynb
+++ b/LabellingSkippingPattern.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\krdeg\\AppData\\Local\\Temp\\ipykernel_11900\\236448581.py:1: DtypeWarning: Columns (11,13,14,15,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\krdeg\\AppData\\Local\\Temp\\ipykernel_3092\\236448581.py:1: DtypeWarning: Columns (11,13,14,15,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  base_df = pd.read_csv(\"BPI2016_Clicks_Logged_In.csv\", encoding_errors=\"ignore\", on_bad_lines='skip', sep=\";\",\n"
      ]
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,12 +158,13 @@
     "# filter the skipping patters to only include the ones where the probability of a-b is min factor_1 and the a-b * b-c is factor_2 times higher than a-c\n",
     "final_skipping_patterns = [x for x in skipping_patterns if x[\"a-b\"] > factor_1 and x[\"a-b\"] * x[\"b-c\"] > x['a-c'] * factor_2] \n",
     "print(len(final_skipping_patterns))\n",
-    "# final_skipping_patterns"
+    "final_skipping_patterns_df = pd.DataFrame(final_skipping_patterns)\n",
+    "# final_skipping_patterns_df.to_csv(f\"gen_patterns/skipping/skipping_patterns_{factor_1_string}_{factor_2_string}.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +173,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "      <th>a-b</th>\n",
+       "      <th>b-c</th>\n",
+       "      <th>a-c</th>\n",
+       "      <th>a-b-c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/ajax/dwr/call/plaincall/JAddressFinder.getAdd...</td>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/wijz...</td>\n",
+       "      <td>end_session</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.260685</td>\n",
+       "      <td>0.007937</td>\n",
+       "      <td>0.173790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/mijn-weg-naar-...</td>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/mijn-weg-naar-...</td>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/inschrijving/m...</td>\n",
+       "      <td>0.255814</td>\n",
+       "      <td>0.429825</td>\n",
+       "      <td>0.003322</td>\n",
+       "      <td>0.109955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/mijn-weg-naar-...</td>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/mijn-weg-naar-...</td>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/werk-zoeken/mi...</td>\n",
+       "      <td>0.265781</td>\n",
+       "      <td>0.352436</td>\n",
+       "      <td>0.009967</td>\n",
+       "      <td>0.093671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/werk_nl/werknemer/solliciteren/ontwikkel-uzelf</td>\n",
+       "      <td>/portal/page/portal/werk_nl/werknemer/sollicit...</td>\n",
+       "      <td>/werk_nl/werknemer/solliciteren/ontwikkel-uzel...</td>\n",
+       "      <td>0.221088</td>\n",
+       "      <td>0.350685</td>\n",
+       "      <td>0.001701</td>\n",
+       "      <td>0.077532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/werk_nl/werknemer/uitkering-aanvragen</td>\n",
+       "      <td>/portal/page/portal/werk_nl/werknemer/uitkerin...</td>\n",
+       "      <td>/portal/page/portal/home/diensten/aanvragen-ww</td>\n",
+       "      <td>0.171661</td>\n",
+       "      <td>0.464428</td>\n",
+       "      <td>0.004622</td>\n",
+       "      <td>0.079724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/mijn...</td>\n",
+       "      <td>/werk_nl/werknemer/home</td>\n",
+       "      <td>/werk_nl/werknemer/solliciteren/ontwikkel-uzel...</td>\n",
+       "      <td>0.091857</td>\n",
+       "      <td>0.000592</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.000054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...</td>\n",
+       "      <td>/werk_nl/werknemer/home</td>\n",
+       "      <td>/werk_nl/werknemer/over-werk-nl/handleiding/va...</td>\n",
+       "      <td>0.082469</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...</td>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/inschrijving/m...</td>\n",
+       "      <td>0.151873</td>\n",
+       "      <td>0.000345</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...</td>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
+       "      <td>//werk_nl/werknemer/solliciteren/ontwikkel-uze...</td>\n",
+       "      <td>0.151873</td>\n",
+       "      <td>0.000276</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...</td>\n",
+       "      <td>/werk_nl/werknemer/home</td>\n",
+       "      <td>/werk_nl/werkgever/home</td>\n",
+       "      <td>0.082469</td>\n",
+       "      <td>0.000427</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000035</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>105 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     a  \\\n",
+       "0    /ajax/dwr/call/plaincall/JAddressFinder.getAdd...   \n",
+       "1    /werk_nl/werknemer/mijn_werkmap/mijn-weg-naar-...   \n",
+       "2    /werk_nl/werknemer/mijn_werkmap/mijn-weg-naar-...   \n",
+       "3      /werk_nl/werknemer/solliciteren/ontwikkel-uzelf   \n",
+       "4               /werk_nl/werknemer/uitkering-aanvragen   \n",
+       "..                                                 ...   \n",
+       "100  /werk_nl/werknemer/mijn_werkmap/doorgeven/mijn...   \n",
+       "101  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...   \n",
+       "102  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...   \n",
+       "103  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...   \n",
+       "104  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...   \n",
+       "\n",
+       "                                                     b  \\\n",
+       "0    /werk_nl/werknemer/mijn_werkmap/doorgeven/wijz...   \n",
+       "1    /werk_nl/werknemer/mijn_werkmap/mijn-weg-naar-...   \n",
+       "2    /werk_nl/werknemer/mijn_werkmap/mijn-weg-naar-...   \n",
+       "3    /portal/page/portal/werk_nl/werknemer/sollicit...   \n",
+       "4    /portal/page/portal/werk_nl/werknemer/uitkerin...   \n",
+       "..                                                 ...   \n",
+       "100                            /werk_nl/werknemer/home   \n",
+       "101                            /werk_nl/werknemer/home   \n",
+       "102  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...   \n",
+       "103  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...   \n",
+       "104                            /werk_nl/werknemer/home   \n",
+       "\n",
+       "                                                     c       a-b       b-c  \\\n",
+       "0                                          end_session  0.666667  0.260685   \n",
+       "1    /werk_nl/werknemer/mijn_werkmap/inschrijving/m...  0.255814  0.429825   \n",
+       "2    /werk_nl/werknemer/mijn_werkmap/werk-zoeken/mi...  0.265781  0.352436   \n",
+       "3    /werk_nl/werknemer/solliciteren/ontwikkel-uzel...  0.221088  0.350685   \n",
+       "4       /portal/page/portal/home/diensten/aanvragen-ww  0.171661  0.464428   \n",
+       "..                                                 ...       ...       ...   \n",
+       "100  /werk_nl/werknemer/solliciteren/ontwikkel-uzel...  0.091857  0.000592   \n",
+       "101  /werk_nl/werknemer/over-werk-nl/handleiding/va...  0.082469  0.000659   \n",
+       "102  /werk_nl/werknemer/mijn_werkmap/inschrijving/m...  0.151873  0.000345   \n",
+       "103  //werk_nl/werknemer/solliciteren/ontwikkel-uze...  0.151873  0.000276   \n",
+       "104                            /werk_nl/werkgever/home  0.082469  0.000427   \n",
+       "\n",
+       "          a-c     a-b-c  \n",
+       "0    0.007937  0.173790  \n",
+       "1    0.003322  0.109955  \n",
+       "2    0.009967  0.093671  \n",
+       "3    0.001701  0.077532  \n",
+       "4    0.004622  0.079724  \n",
+       "..        ...       ...  \n",
+       "100  0.000005  0.000054  \n",
+       "101  0.000007  0.000054  \n",
+       "102  0.000007  0.000052  \n",
+       "103  0.000007  0.000042  \n",
+       "104  0.000007  0.000035  \n",
+       "\n",
+       "[105 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skipping_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -196,14 +420,14 @@
        "348"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = find_anomalous_sessions(base_df,skipping_df)\n",
-    "len(test)\n",
+    "sessions = find_anomalous_sessions(base_df,skipping_df)\n",
+    "len(sessions)\n",
     "\n",
     "# 5478504\n",
     "# 1434495"
@@ -211,19 +435,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [12], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# create a new column in the base_df to indicate if the session is anomalous\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# if a session is anomalous it will have a True in the column else False\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m labeled_df \u001b[39m=\u001b[39m base_df\u001b[39m.\u001b[39;49mcopy()\n\u001b[0;32m      4\u001b[0m labeled_df[\u001b[39m\"\u001b[39m\u001b[39manomaly\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m base_df[\u001b[39m\"\u001b[39m\u001b[39mSessionID\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: x \u001b[39min\u001b[39;00m sessions)\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:6032\u001b[0m, in \u001b[0;36mNDFrame.copy\u001b[1;34m(self, deep)\u001b[0m\n\u001b[0;32m   5926\u001b[0m \u001b[39m@final\u001b[39m\n\u001b[0;32m   5927\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcopy\u001b[39m(\u001b[39mself\u001b[39m: NDFrameT, deep: bool_t \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m NDFrameT:\n\u001b[0;32m   5928\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   5929\u001b[0m \u001b[39m    Make a copy of this object's indices and data.\u001b[39;00m\n\u001b[0;32m   5930\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   6030\u001b[0m \u001b[39m    dtype: object\u001b[39;00m\n\u001b[0;32m   6031\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 6032\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_mgr\u001b[39m.\u001b[39;49mcopy(deep\u001b[39m=\u001b[39;49mdeep)\n\u001b[0;32m   6033\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_clear_item_cache()\n\u001b[0;32m   6034\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_constructor(data)\u001b[39m.\u001b[39m__finalize__(\u001b[39mself\u001b[39m, method\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcopy\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\internals\\managers.py:615\u001b[0m, in \u001b[0;36mBaseBlockManager.copy\u001b[1;34m(self, deep)\u001b[0m\n\u001b[0;32m    612\u001b[0m         res\u001b[39m.\u001b[39m_blklocs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_blklocs\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m    614\u001b[0m \u001b[39mif\u001b[39;00m deep:\n\u001b[1;32m--> 615\u001b[0m     res\u001b[39m.\u001b[39;49m_consolidate_inplace()\n\u001b[0;32m    616\u001b[0m \u001b[39mreturn\u001b[39;00m res\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\internals\\managers.py:1688\u001b[0m, in \u001b[0;36mBlockManager._consolidate_inplace\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1686\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_consolidated \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m   1687\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_known_consolidated \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m-> 1688\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_rebuild_blknos_and_blklocs()\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\_libs\\internals.pyx:705\u001b[0m, in \u001b[0;36mpandas._libs.internals.BlockManager._rebuild_blknos_and_blklocs\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\internals\\base.py:55\u001b[0m, in \u001b[0;36mDataManager.shape\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[0;32m     54\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mshape\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Shape:\n\u001b[1;32m---> 55\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mtuple\u001b[39m(\u001b[39mlen\u001b[39m(ax) \u001b[39mfor\u001b[39;00m ax \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxes)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# create a new column in the base_df to indicate if the session is anomalous\n",
     "# if a session is anomalous it will have a True in the column else False\n",
     "labeled_df = base_df.copy()\n",
-    "labeled_df[\"anomalous\"] = base_df[\"SessionID\"].apply(lambda x: x in ses)"
+    "labeled_df[\"anomaly\"] = base_df[\"SessionID\"].apply(lambda x: x in sessions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
