--- a/Veldman/Running_the_models.ipynb
+++ b/Veldman/Running_the_models.ipynb
@@ -978,7 +978,7 @@
     "            if column_name not in X_train_extra.columns:\n",
     "                X_test.drop(columns=[column_name], inplace=True)\n",
     "        \n",
-    "        #clf_extra = tree.DecisionTreeClassifier().fit(X_train_extra, y_train_extra_transformed)\n",
+    "        clf_extra = tree.DecisionTreeClassifier().fit(X_train_extra, y_train_extra_transformed)\n",
     "        clf_extra = LogisticRegression(random_state=0, max_iter=1000).fit(X_train_extra, y_train_extra_transformed)\n",
     "        #y_train_predict = clf_extra.predict(X_train_extra)\n",
     "        y_test_predict = clf_extra.predict(X_test)\n",
