--- a/Replaced/Veldman_2.ipynb
+++ b/Replaced/Veldman_2.ipynb
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "df_raw = pd.read_csv(\"./labeled_data/labeled_df_15.csv\", encoding_errors=\"ignore\", on_bad_lines='skip', sep=\",\", index_col=False,\n",
+    "df_raw = pd.read_csv(\"./labeled_data/Replaced.csv\", encoding_errors=\"ignore\", on_bad_lines='skip', sep=\",\", index_col=False,\n",
     "                    usecols=['SessionID','Activity','anomaly'])\n",
     "# change anomaly to int\n",
     "df_raw['anomaly'] = df_raw['anomaly'].astype(int)\n",
@@ -228,9 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1534\n"
+     ]
+    }
+   ],
    "source": [
     "#Filter to get df with only real anomalies\n",
     "amount_for_filtering_real_anomalies = 0\n",
@@ -252,7 +260,7 @@
    "outputs": [],
    "source": [
     "#Select amount of sessions used in the dataframe\n",
-    "var_1_amount_real = 25000\n",
+    "var_1_amount_real = 30000\n",
     "var_1_amount_generated = 0\n",
     "df_real = concat_and_filter(df_raw, \"./gen_sessions/1000/100_1000.csv\", amount_real = var_1_amount_real, amount_anomalies = var_1_amount_generated)\n",
     "\n",
@@ -303,13 +311,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# import the generated sessions:\n",
-    "ses_amount = 5000\n",
+    "ses_amount = 1000\n",
     "base_path = f\"gen_sessions/{str(ses_amount)}/\"\n",
     "\n",
     "gen_sessions_paths = [\n",
@@ -328,63 +336,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gen_sessions/5000/5_5000.csv 1\n",
-      "0.6173913043478261\n",
+      "gen_sessions/1000/5_1000.csv 10\n",
+      "0.5\n",
       "\n",
-      "gen_sessions/5000/5_5000.csv 251\n",
-      "0.6173913043478261\n",
+      "gen_sessions/1000/5_1000.csv 20\n",
+      "0.5\n",
       "\n",
-      "gen_sessions/5000/5_5000.csv 501\n",
-      "0.6173913043478261\n",
+      "gen_sessions/1000/5_1000.csv 50\n",
+      "0.4999166666666667\n",
       "\n",
-      "gen_sessions/5000/5_5000.csv 751\n",
-      "0.6376811594202898\n",
+      "gen_sessions/1000/5_1000.csv 65\n",
+      "0.4999166666666667\n",
       "\n",
-      "gen_sessions/5000/5_5000.csv 1001\n",
-      "0.6507246376811594\n",
+      "gen_sessions/1000/5_1000.csv 100\n",
+      "0.5\n",
       "\n",
-      "gen_sessions/5000/5_5000.csv 1251\n",
-      "0.6173913043478261\n",
+      "gen_sessions/1000/5_1000.csv 200\n",
+      "0.4999166666666667\n",
       "\n",
-      "gen_sessions/5000/5_5000.csv 1501\n",
-      "0.6376811594202898\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 1751\n",
-      "0.6173913043478261\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 2001\n",
-      "0.6173913043478261\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 2251\n",
-      "0.6376811594202898\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 2501\n",
-      "0.6173913043478261\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 2751\n",
-      "0.6507246376811594\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 3001\n",
-      "0.6710144927536232\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 3251\n",
-      "0.6173913043478261\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 3501\n",
-      "0.6507246376811594\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 3751\n",
-      "0.6507246376811594\n",
-      "\n",
-      "gen_sessions/5000/5_5000.csv 4001\n",
-      "0.6173913043478261\n",
+      "gen_sessions/1000/5_1000.csv 300\n",
+      "0.5\n",
       "\n"
      ]
     },
@@ -395,15 +373,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [10], line 30\u001b[0m\n\u001b[0;32m     27\u001b[0m df_generated_for_training \u001b[39m=\u001b[39m make_df_for_isolation_forest(one_hot_encoded_df_generated)\n\u001b[0;32m     29\u001b[0m \u001b[39m#Add the generated anomalies to the training dataset\u001b[39;00m\n\u001b[1;32m---> 30\u001b[0m X_train_extra \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mconcat([X_train, df_generated_for_training\u001b[39m.\u001b[39;49mdrop(columns\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39manomaly\u001b[39;49m\u001b[39m\"\u001b[39;49m])])\u001b[39m.\u001b[39;49mfillna(\u001b[39m0\u001b[39;49m)\n\u001b[0;32m     31\u001b[0m y_train_extra \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([y_train, df_generated_for_training[\u001b[39m\"\u001b[39m\u001b[39manomaly\u001b[39m\u001b[39m\"\u001b[39m]])\n\u001b[0;32m     32\u001b[0m \u001b[39m# print(y_train_extra)\u001b[39;00m\n\u001b[0;32m     33\u001b[0m \n\u001b[0;32m     34\u001b[0m \u001b[39m#transform y values to binary class\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\util\\_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    306\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    307\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[0;32m    308\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    309\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[0;32m    310\u001b[0m     )\n\u001b[1;32m--> 311\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:5220\u001b[0m, in \u001b[0;36mDataFrame.fillna\u001b[1;34m(self, value, method, axis, inplace, limit, downcast)\u001b[0m\n\u001b[0;32m   5209\u001b[0m \u001b[39m@deprecate_nonkeyword_arguments\u001b[39m(version\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, allowed_args\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mself\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m   5210\u001b[0m \u001b[39m@doc\u001b[39m(NDFrame\u001b[39m.\u001b[39mfillna, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m_shared_doc_kwargs)\n\u001b[0;32m   5211\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfillna\u001b[39m(\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5218\u001b[0m     downcast\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   5219\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m-> 5220\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mfillna(\n\u001b[0;32m   5221\u001b[0m         value\u001b[39m=\u001b[39;49mvalue,\n\u001b[0;32m   5222\u001b[0m         method\u001b[39m=\u001b[39;49mmethod,\n\u001b[0;32m   5223\u001b[0m         axis\u001b[39m=\u001b[39;49maxis,\n\u001b[0;32m   5224\u001b[0m         inplace\u001b[39m=\u001b[39;49minplace,\n\u001b[0;32m   5225\u001b[0m         limit\u001b[39m=\u001b[39;49mlimit,\n\u001b[0;32m   5226\u001b[0m         downcast\u001b[39m=\u001b[39;49mdowncast,\n\u001b[0;32m   5227\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:6498\u001b[0m, in \u001b[0;36mNDFrame.fillna\u001b[1;34m(self, value, method, axis, inplace, limit, downcast)\u001b[0m\n\u001b[0;32m   6495\u001b[0m         new_data \u001b[39m=\u001b[39m result\n\u001b[0;32m   6496\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 6498\u001b[0m         new_data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_mgr\u001b[39m.\u001b[39;49mfillna(\n\u001b[0;32m   6499\u001b[0m             value\u001b[39m=\u001b[39;49mvalue, limit\u001b[39m=\u001b[39;49mlimit, inplace\u001b[39m=\u001b[39;49minplace, downcast\u001b[39m=\u001b[39;49mdowncast\n\u001b[0;32m   6500\u001b[0m         )\n\u001b[0;32m   6501\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(value, ABCDataFrame) \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mndim \u001b[39m==\u001b[39m \u001b[39m2\u001b[39m:\n\u001b[0;32m   6503\u001b[0m     new_data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwhere(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnotna(), value)\u001b[39m.\u001b[39m_mgr\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\internals\\managers.py:414\u001b[0m, in \u001b[0;36mBaseBlockManager.fillna\u001b[1;34m(self, value, limit, inplace, downcast)\u001b[0m\n\u001b[0;32m    413\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfillna\u001b[39m(\u001b[39mself\u001b[39m: T, value, limit, inplace: \u001b[39mbool\u001b[39m, downcast) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m T:\n\u001b[1;32m--> 414\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply(\n\u001b[0;32m    415\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mfillna\u001b[39;49m\u001b[39m\"\u001b[39;49m, value\u001b[39m=\u001b[39;49mvalue, limit\u001b[39m=\u001b[39;49mlimit, inplace\u001b[39m=\u001b[39;49minplace, downcast\u001b[39m=\u001b[39;49mdowncast\n\u001b[0;32m    416\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\internals\\managers.py:304\u001b[0m, in \u001b[0;36mBaseBlockManager.apply\u001b[1;34m(self, f, align_keys, ignore_failures, **kwargs)\u001b[0m\n\u001b[0;32m    302\u001b[0m         applied \u001b[39m=\u001b[39m b\u001b[39m.\u001b[39mapply(f, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    303\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 304\u001b[0m         applied \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(b, f)(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    305\u001b[0m \u001b[39mexcept\u001b[39;00m (\u001b[39mTypeError\u001b[39;00m, \u001b[39mNotImplementedError\u001b[39;00m):\n\u001b[0;32m    306\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m ignore_failures:\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\internals\\blocks.py:472\u001b[0m, in \u001b[0;36mBlock.fillna\u001b[1;34m(self, value, limit, inplace, downcast)\u001b[0m\n\u001b[0;32m    470\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_can_hold_element(value):\n\u001b[0;32m    471\u001b[0m     nb \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m \u001b[39mif\u001b[39;00m inplace \u001b[39melse\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m--> 472\u001b[0m     putmask_inplace(nb\u001b[39m.\u001b[39;49mvalues, mask, value)\n\u001b[0;32m    473\u001b[0m     \u001b[39mreturn\u001b[39;00m nb\u001b[39m.\u001b[39m_maybe_downcast([nb], downcast)\n\u001b[0;32m    475\u001b[0m \u001b[39mif\u001b[39;00m noop:\n\u001b[0;32m    476\u001b[0m     \u001b[39m# we can't process the value, but nothing to do\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\array_algos\\putmask.py:60\u001b[0m, in \u001b[0;36mputmask_inplace\u001b[1;34m(values, mask, value)\u001b[0m\n\u001b[0;32m     57\u001b[0m         values[mask] \u001b[39m=\u001b[39m value\n\u001b[0;32m     58\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     59\u001b[0m     \u001b[39m# GH#37833 np.putmask is more performant than __setitem__\u001b[39;00m\n\u001b[1;32m---> 60\u001b[0m     np\u001b[39m.\u001b[39;49mputmask(values, mask, value)\n",
-      "File \u001b[1;32m<__array_function__ internals>:5\u001b[0m, in \u001b[0;36mputmask\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "Cell \u001b[1;32mIn [13], line 51\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[39mif\u001b[39;00m column_name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m X_train_extra\u001b[39m.\u001b[39mcolumns:\n\u001b[0;32m     49\u001b[0m         X_test\u001b[39m.\u001b[39mdrop(columns\u001b[39m=\u001b[39m[column_name], inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m---> 51\u001b[0m clf_extra \u001b[39m=\u001b[39m tree\u001b[39m.\u001b[39;49mDecisionTreeClassifier()\u001b[39m.\u001b[39;49mfit(X_train_extra, y_train_extra_transformed)\n\u001b[0;32m     52\u001b[0m \u001b[39m# clf_extra = LogisticRegression(random_state=0, max_iter=1000).fit(X_train_extra, y_train_extra_transformed)\u001b[39;00m\n\u001b[0;32m     53\u001b[0m \u001b[39m# y_train_predict = clf_extra.predict(X_train_extra)\u001b[39;00m\n\u001b[0;32m     54\u001b[0m y_test_predict \u001b[39m=\u001b[39m clf_extra\u001b[39m.\u001b[39mpredict(X_test)\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\sklearn\\tree\\_classes.py:969\u001b[0m, in \u001b[0;36mDecisionTreeClassifier.fit\u001b[1;34m(self, X, y, sample_weight, check_input)\u001b[0m\n\u001b[0;32m    939\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfit\u001b[39m(\u001b[39mself\u001b[39m, X, y, sample_weight\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, check_input\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m    940\u001b[0m     \u001b[39m\"\"\"Build a decision tree classifier from the training set (X, y).\u001b[39;00m\n\u001b[0;32m    941\u001b[0m \n\u001b[0;32m    942\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    966\u001b[0m \u001b[39m        Fitted estimator.\u001b[39;00m\n\u001b[0;32m    967\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 969\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mfit(\n\u001b[0;32m    970\u001b[0m         X,\n\u001b[0;32m    971\u001b[0m         y,\n\u001b[0;32m    972\u001b[0m         sample_weight\u001b[39m=\u001b[39;49msample_weight,\n\u001b[0;32m    973\u001b[0m         check_input\u001b[39m=\u001b[39;49mcheck_input,\n\u001b[0;32m    974\u001b[0m     )\n\u001b[0;32m    975\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\sklearn\\tree\\_classes.py:458\u001b[0m, in \u001b[0;36mBaseDecisionTree.fit\u001b[1;34m(self, X, y, sample_weight, check_input)\u001b[0m\n\u001b[0;32m    447\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    448\u001b[0m     builder \u001b[39m=\u001b[39m BestFirstTreeBuilder(\n\u001b[0;32m    449\u001b[0m         splitter,\n\u001b[0;32m    450\u001b[0m         min_samples_split,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    455\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmin_impurity_decrease,\n\u001b[0;32m    456\u001b[0m     )\n\u001b[1;32m--> 458\u001b[0m builder\u001b[39m.\u001b[39;49mbuild(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtree_, X, y, sample_weight)\n\u001b[0;32m    460\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_outputs_ \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m is_classifier(\u001b[39mself\u001b[39m):\n\u001b[0;32m    461\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_classes_ \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_classes_[\u001b[39m0\u001b[39m]\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -424,7 +396,7 @@
     "    precision_score_list = []\n",
     "    recall_score_list = []\n",
     "\n",
-    "    for var_2_amount_generated in range(1, 5000, 250):\n",
+    "    for var_2_amount_generated in [10, 20, 50, 65, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]:\n",
     "    #[10, 100, 500, 1000, 2000]:\n",
     "    #for var_2_amount_generated in [2000, 2500, 3000, 4000, 5000, 9999]:\n",
     "\n",
